LPS-68793 - Remove changes specific to LPS-59687 because Firefox has fixed the overflow issues.

--- a/modules/apps/foundation/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/taglib/_logo_selector.scss
+++ b/modules/apps/foundation/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/taglib/_logo_selector.scss
@@ -24,19 +24,3 @@
 .taglib-logo-selector .avatar {
 	max-width: 100%;
 }
-
-// LPS-59687
-
-.gecko {
-	.fieldset {
-		.avatar {
-			max-height: 100%;
-		}
-
-		.lfr-change-logo {
-			display: inline-block;
-			overflow: hidden;
-			position: relative;
-		}
-	}
-}
